Add link to css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel='stylesheet' href='{{ site.url }}/css/main.css'>
+  </head>
 
   <body>
     {{ content }}
