--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
@@ -10,7 +10,7 @@
     </div>
 
     {% if page.script %}
-    	<script type="text/javascript" src="{{ site.url }}/game/{{ page.script }}"></script>
+    	<script type="text/javascript" src="game/{{ page.script }}"></script>
     {% endif %}
   </body>
 
